# ochainv2

./: .gitignore  .pre-commit-config.yaml  PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: instruments.yaml  nse_holidays.yaml  settings.example.yaml  strategies.yaml
scripts/: compare_v1_v2.py  locustfile.py  run_api.ps1  run_collector.ps1
src/ochain_v2/: __init__.py  __main__.py
src/ochain_v2/analyzers/: alerts.py  expected_move.py  gex.py  greeks.py  heatmap.py  iv_surface.py  primitives.py  rollover.py
src/ochain_v2/api/: cache.py  collector_api.py  deps.py  main.py
src/ochain_v2/cli/: migrate.py
src/ochain_v2/core/: errors.py  logging.py  market_hours.py  settings.py  timezones.py  ulid.py
src/ochain_v2/db/: duckdb_reader.py  duckdb_store.py  legacy_sqlite.py  meta_sqlite.py  schema.sql
src/ochain_v2/ingestion/: __main__.py  circuit_breaker.py  delta_writer.py  job.py  live_publisher.py  market_hours.py  scheduler.py  token_bucket.py
static/css/: style.css
static/js/: app.js  utils.js
static/js/components/: alert-toast.js  error-state.js  header.js  skeleton.js  slider.js  summary.js
static/js/core/: api.js  state.js  ws.js
static/js/tabs/: chain.js  expiry.js  flow.js  heatmap.js  iv.js  scalper.js  signals.js  strategy.js  strike.js  volume.js
templates/: index.html
tests/: conftest.py
tests/integration/: test_collector_integration.py  test_ws_live.py
tests/unit/analyzers/: test_alerts.py  test_expected_move.py  test_gex.py  test_greeks.py  test_heatmap.py  test_iv_surface.py  test_primitives.py  (+2 more)
(+48 files in other folders)
