[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ochain-v2"
version = "2.0.0"
description = "Indian market option chain collector and analyzer"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pytz>=2024.1",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dhan = [
    "Dhan-Tradehull>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "types-pytz>=2024.1.0",
    "locust>=2.28.0",
]

[project.scripts]
ochain = "ochain_v2.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ochain_v2"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"
